--- a/lab13/lab13_hw.Rmd
+++ b/lab13/lab13_hw.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "Lab 13 Homework"
-author: "Please Add Your Name Here"
+author: "Oonagh Pretorius"
 date: "`r Sys.Date()`"
 output:
-  html_document:
+  html_document: 
     theme: spacelab
-    toc: no
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -26,7 +26,7 @@ library(ggmap)
 ``` 
 
 ```{r}
-library(albersusa)
+#library(albersusa)
 ```
 
 ## Load the Data
@@ -37,36 +37,102 @@ We will use two separate data sets for this homework.
 2. The second data set is from Brandell, Ellen E (2021), Serological dataset and R code for: Patterns and processes of pathogen exposure in gray wolves across North America, Dryad, [Dataset](https://doi.org/10.5061/dryad.5hqbzkh51).  
 
 1. Load the `grizzly` data and evaluate its structure.  
-
+```{r}
+grizzly <- read_csv("data/bear-sightings.csv")
+glimpse(grizzly)  # it is tidy
+```
 
 2. Use the range of the latitude and longitude to build an appropriate bounding box for your map.  
+```{r}
+grizzly %>% 
+  select(latitude, longitude) %>%
+  summary()
+```
+
+```{r}
+lat <- c(55.02, 70.37)
+long <- c(-166.2, -131.3)
+bbox <- make_bbox(long, lat, f = 0.05)
+```
 
 
 3. Load a map from `stamen` in a terrain style projection and display the map.  
+```{r}
+map1 <- get_map(bbox, maptype = "terrain", source = "stamen")
+```
 
+```{r}
+ggmap(map1)
+```
 
 4. Build a final map that overlays the recorded observations of grizzly bears in Alaska.  
 
+```{r}
+ggmap(map1) + 
+  geom_point(data = grizzly, aes(longitude, latitude)) +
+  labs(x= "Longitude", y= "Latitude", title="Grizzly Bear Locations")
+```
 
 Let's switch to the wolves data. Brandell, Ellen E (2021), Serological dataset and R code for: Patterns and processes of pathogen exposure in gray wolves across North America, Dryad, [Dataset](https://doi.org/10.5061/dryad.5hqbzkh51).  
 
 5. Load the data and evaluate its structure.  
+```{r}
+wolves <- read_csv(here("lab13", "data", "wolves_data", "wolves_dataset.csv"))
+glimpse(wolves)  # it is tidy
+```
+```{r}
+head(wolves) #the data are tidy
+summary(wolves) #NAs are represented as NAs
+naniar::miss_var_summary(wolves) #large degree of missingness for some variables
+```
 
+6. How many distinct wolf populations are included in this study? Make a new object that restricts the data to the wolf populations in the lower 48 US states.  
 
-6. How many distinct wolf populations are included in this study? Mae a new object that restricts the data to the wolf populations in the lower 48 US states.  
+```{r}
+wolves %>% 
+  summarize(distinct_population = n_distinct(population))
+```
+```{r}
+US_wolves <- wolves %>% 
+  filter(lat <= 48)
+```
 
 
 7. Use the range of the latitude and longitude to build an appropriate bounding box for your map.  
+```{r}
+US_wolves %>% 
+  select(lat, long) %>% #lat and long are in degrees decimal
+  summary() #gives you an idea of what size your bounding box should be
+```
 
+```{r}
+latitude <- c(33.89, 47.75)
+longitude <- c(-110.99, -86.82)
+bbox2 <- make_bbox(longitude, latitude, f = 0.05)
+```
 
 8.  Load a map from `stamen` in a `terrain-lines` projection and display the map.  
+```{r}
+map2 <- get_map(bbox2, maptype = "terrain-lines", source = "stamen")
+```
 
+```{r}
+ggmap(map2)
+```
 
 9. Build a final map that overlays the recorded observations of wolves in the lower 48 states.  
-
+```{r}
+ggmap(map2) + 
+  geom_point(data = US_wolves, aes(long, lat)) +
+  labs(x="Longitude", y="Latitude", title="Wolf Population Locations")
+```
 
 10. Use the map from #9 above, but add some aesthetics. Try to `fill` and `color` by population.  
-
+```{r}
+ggmap(map2) + 
+  geom_point(data = US_wolves, aes(long, lat, fill=pop, col=pop), size=3) +
+  labs(x="Longitude", y="Latitude", title="US Wolf Population Locations in the Lower 48")
+```
 
 ## Push your final code to GitHub!
 Please be sure that you check the `keep md` file in the knit preferences. 
