--- a/lab11/lab11_hw.Rmd
+++ b/lab11/lab11_hw.Rmd
@@ -162,10 +162,10 @@ gapminder2 %>%
   ggplot(aes(x = gdpPercap, y = lifeExp, color = continent, size = pop)) +
   geom_point(alpha = 0.5) +
   scale_x_log10() +
-  labs(title = "GDP versus life expectancy in 1999",
+  labs(title = "National GDP versus life expectancy in 1999 by continent",
        x = "GDP per capita (log scale)",
-       y = "Life Expectancy",
-       size = "Popoulation (millions)",
+       y = "Life Expectancy (years)",
+       size = "Population (millions)",
        color = "Continent") +
   scale_size(range = c(0.1, 10),
              breaks = 1000000 * c(250, 500, 750, 1000, 1250),
